--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@nuxtjs/i18n": "^7.2.2",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vue-flickity": "^1.2.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
